--- a/ProjectPresentation1.ipynb
+++ b/ProjectPresentation1.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "10cdc8dc",
    "metadata": {},
    "source": [
     "# Introduction"
@@ -9,6 +10,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "703ccb26",
    "metadata": {},
    "source": [
     "With the outbreak of Covid-19, we believe that it is important for us to learn about how the computer recognizes whether a person is wearing a mask. The more accurate the algorithm, the better it serves to alert people as a protective precaution. In this project, we are going to implement machine learning models to explore the ways to execute mask classification with high accuracy. First, load the required packages."
@@ -17,6 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7a242779",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "877ad897",
    "metadata": {},
    "outputs": [
     {
@@ -56,6 +60,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ebf69c1a",
    "metadata": {},
    "source": [
     "# §1. Data Visualization"
@@ -63,6 +68,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "43725cc3",
    "metadata": {},
    "source": [
     "* Our data set consists of images of faces with or without masks. The majority of images in our old dataset were created by manually pasting stickers of masks on faces. To make our model more convincing, we deleted all created images and added many real faces that wear masks.   \n",
@@ -75,6 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "00c5c0f5",
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +116,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f12e9ac3",
    "metadata": {},
    "source": [
     "#### Here are some of the examples of images of faces with masks"
@@ -117,6 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "8c9f4143",
    "metadata": {},
    "outputs": [
     {
@@ -151,6 +160,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2a638ab6",
    "metadata": {},
    "source": [
     "<h1>§2. Data Preprocessing</h1>"
@@ -158,6 +168,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "49b7e246",
    "metadata": {},
    "source": [
     "Now we will define a function that can be used to process our data before training our model "
@@ -166,6 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "0df50b8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,6 +233,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21798d76",
    "metadata": {},
    "source": [
     "Now we will preprocess the data set that we will be used to train the model."
@@ -229,6 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "af0197e5",
    "metadata": {},
    "outputs": [
     {
@@ -247,6 +261,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d70946d6",
    "metadata": {},
    "source": [
     "Let us see what is the baseline performance "
@@ -255,6 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "f0b06ead",
    "metadata": {},
    "outputs": [
     {
@@ -275,6 +291,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f34f3e3e",
    "metadata": {},
    "source": [
     "After preprocessing out data, we need to split data into training and testing sets before buidling and training our model. We split with the ratio 9:1."
@@ -283,6 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "7a06f5d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,6 +310,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "59c6398e",
    "metadata": {},
    "source": [
     "<h1>§3. Data Augmentation</h1>"
@@ -299,6 +318,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f4dad3f0",
    "metadata": {},
    "source": [
     "Since we want to add some data augmentation layers to our model, we will first experiment wil these layers. \n",
@@ -308,6 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "8551d8e2",
    "metadata": {},
    "outputs": [
     {
@@ -336,6 +357,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9cdbda76",
    "metadata": {},
    "source": [
     "* Then we will create a tf.keras.layers.RandomRotation() layer and make a plot of the original image versus the rotated ones."
@@ -344,6 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "bea73108",
    "metadata": {},
    "outputs": [
     {
@@ -372,6 +395,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b1f9568",
    "metadata": {},
    "source": [
     "<h1>§4. Machine Learning Model</h1>"
@@ -379,6 +403,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df3b022f",
    "metadata": {},
    "source": [
     "We will create a tf.keras.Sequential model using both a preprocessor, data augmentation layers, and also some of layers that we have discussed in class"
@@ -387,6 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "6655b749",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,6 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "4163344f",
    "metadata": {},
    "outputs": [
     {
@@ -489,6 +516,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aa9ddb6a",
    "metadata": {},
    "source": [
     "Now we will train model and plot the history of the accuracy on both the training and validation sets. "
@@ -497,6 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "cfb34809",
    "metadata": {},
    "outputs": [
     {
@@ -577,6 +606,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a46f332d",
    "metadata": {},
    "source": [
     "From the output, we can see that despite that there are some fluctuations in the first few epochs, the validation accuracy of the model stabilizes to a decent leve of well above 90 percent. A visualization of the training history is as follows."
@@ -585,6 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "5ed13955",
    "metadata": {},
    "outputs": [
     {
@@ -623,6 +654,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5824591a",
+   "metadata": {},
+   "source": [
+    "We see that training accuracy was around 95%, and validation accuracy was around 94%. We do observe a big drop in validation accuracy in one of the earlier epoches, which may be explained by the stochastic nature of the optimization process (i.e., stochastic gradient descent). What's important is that the validation accuracy eventually stablized at around 94%. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0eac1901",
    "metadata": {},
    "source": [
     "Now we would want to evaluate the accuracy of the model on the test dataset"
@@ -631,6 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "7a59a80d",
    "metadata": {},
    "outputs": [
     {
@@ -648,13 +689,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e5ba863",
    "metadata": {},
    "source": [
-    "<h1>§5. Testing Model on data sets of different racial group</h1>"
+    "<h1>§5. Testing Model on Data Sets of Different Racial Groups</h1>"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "f916e89a",
    "metadata": {},
    "source": [
     "* Besides examining the performance on all people comprehensively, we would also like to see if different skin colors and facial characteristics across races might affect the model's performance. \n",
@@ -664,6 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "bfdbbb79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,6 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "6eeefe19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,6 +753,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "092518a6",
    "metadata": {},
    "source": [
     "#### 1. Data set containing faces of black people wearing masks and not wearing masks"
@@ -716,6 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
+   "id": "23ddf88b",
    "metadata": {},
    "outputs": [
     {
@@ -746,6 +793,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "afbf95b6",
    "metadata": {},
    "source": [
     "#### 2. Data set containing faces of East Asia people wearing masks and not wearing masks"
@@ -754,6 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
+   "id": "051a1ee3",
    "metadata": {},
    "outputs": [
     {
@@ -784,6 +833,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "59aedc68",
    "metadata": {},
    "source": [
     "#### 3. Data set containing faces of White people wearing masks and not wearing masks"
@@ -792,6 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
+   "id": "a24ec4a1",
    "metadata": {},
    "outputs": [
     {
@@ -822,6 +873,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a803f91",
    "metadata": {},
    "source": [
     "We can see that our model performs best on Asian with around 92% accuracy. It also shows around 84% accuracy on Whites and 80% on Blacks. Our model's different levels of accuracy among races might result from different percentage of training data we have for each race. The majority of our training data is Asian, followed by Whites, with only limited Blacks. With this limitation in mind, we believe incorporating more data of black people probably will help relieve it. "
@@ -829,6 +881,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c57d2b9",
    "metadata": {},
    "source": [
     "<h1>§6. Limitations & Future Directions</h1>"
@@ -836,8 +889,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e57752c8",
    "metadata": {},
    "source": [
+    "- As the test accuracies suggested, our model performed less well on differentiating black and white people with vs. without masks. This may be because there are more Asian people in our \"with_mask\" training dataset than people of other racial groups. We did attempt to balance the number of people of different racial groups who are wearing masks, but since there is no existing dataset that uses **real**, as opposed to synthetic, images of masks, we had to find individual photos ourselves. And, it was harder to find black and white people with masks on Google Images. \n",
+    "    - Future direction: Spend more time curating a more racially and ethnically balanced dataset.\n",
+    "\n",
     "- The current model is limited to classifying **static** images of people with and without masks. In reality, a face mask classifier would receive **dynamic**, **online** inputs.\n",
     "    - Future direction: Develop an algorithm that can signal whether someone is wearing a mask real time in a video. This could be done by repeatedly deploying the current algorithm on each frame of the video.\n",
     "\n",
@@ -850,13 +907,21 @@
     "- Some people cannot wear masks due to medical/religious reasons. \n",
     "    - Future direction: Although it would be hard to develop an algorithm that can tell if someone has a medical condition  that makes them unable to wear masks, we know that certain populations just cannot wear masks (e.g., children < 2yrs). So, it might be worthwhile to develop a face mask detector that does not display warnings when a toddler is not wearing a mask. This would involve training the algorithm to differentiate facial features on top of having masks or not."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8ac5d55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:PIC16B] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-PIC16B-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -868,7 +933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
