--- a/ProjectPresentation1.ipynb
+++ b/ProjectPresentation1.ipynb
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5824591a",
+   "id": "3bfe7c06",
    "metadata": {},
    "source": [
     "We see that training accuracy was around 95%, and validation accuracy was around 94%. We do observe a big drop in validation accuracy in one of the earlier epoches, which may be explained by the stochastic nature of the optimization process (i.e., stochastic gradient descent). What's important is that the validation accuracy eventually stablized at around 94%. "
@@ -892,7 +892,7 @@
    "id": "e57752c8",
    "metadata": {},
    "source": [
-    "- As the test accuracies suggested, our model performed less well on differentiating black and white people with vs. without masks. This may be because there are more Asian people in our \"with_mask\" training dataset than people of other racial groups. We did attempt to balance the number of people of different racial groups who are wearing masks, but since there is no existing dataset that uses **real**, as opposed to synthetic, images of masks, we had to find individual photos ourselves. And, it was harder to find black and white people with masks on Google Images. \n",
+    "- As the test accuracies suggested, our model performed less well on differentiating black and white people with vs. without masks. This may be because there are more Asian people in our \"with_mask\" training dataset than people of other racial groups. We did attempt to balance the number of people of different racial groups who are wearing masks, but since no existing dataset that contains **real**, as opposed to synthetic, images of masks is racially diverse, for the racial minority groups we had to find individual photos ourselves. And, it was harder to find black people with masks on Google Images. \n",
     "    - Future direction: Spend more time curating a more racially and ethnically balanced dataset.\n",
     "\n",
     "- The current model is limited to classifying **static** images of people with and without masks. In reality, a face mask classifier would receive **dynamic**, **online** inputs.\n",
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ac5d55",
+   "id": "57b1626e",
    "metadata": {},
    "outputs": [],
    "source": []
