--- a/src/2_DataPreprocessing.ipynb
+++ b/src/2_DataPreprocessing.ipynb
@@ -94,7 +94,7 @@
    ],
    "source": [
     "# Construct our data and target variable\n",
-    "path = \"/Users/yuchenzhang/Desktop/2021-2022/FALL/PIC16B/MasksPlease/data\"\n",
+    "path = \"data\"\n",
     "data, target = DataPreprocess(path)"
    ]
   },
