--- a/src/2_DataPreprocessing.ipynb
+++ b/src/2_DataPreprocessing.ipynb
@@ -94,8 +94,7 @@
    ],
    "source": [
     "# Construct our data and target variable\n",
-    "path = \"data\"\n",
-    "data, target = DataPreprocess(path)"
+    "data, target = DataPreprocess(\"data\")"
    ]
   },
   {
