--- a/src/3_ModelTraining.ipynb
+++ b/src/3_ModelTraining.ipynb
@@ -610,35 +610,11 @@
    "source": [
     "* We can see that our model performs best on Asian with around 92% accuracy. It also shows around 84% accuracy on Whites and 80% on Blacks. Our model's different levels of accuracy among races might result from different percentage of training data we have for each race. The majority of our training data is Asian, followed by Whites, with only limited Blacks. With this limitation in mind, we believe incorporating more data of black people probably will help relieve it. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1>§6. Limitations & Future Directions</h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- The current model is limited to classifying **static** images of people with and without masks. In reality, a face mask classifier would receive **dynamic**, **online** inputs.\n",
-    "    - Future direction: Develop an algorithm that can signal whether someone is wearing a mask real time in a video. This could be done by repeatedly deploying the current algorithm on each frame of the video.\n",
-    "\n",
-    "- Currently, the model can only tell apart masks vs. without masks. But, it cannot differentiate different types of facial covering (e.g., masks, bandanas, scarves). As we know, masks are more effective in preventing the spread of COVID-19 than other types of facial coverings. \n",
-    "    - Future direction: Develop a face mask **detector**, as opposed to **classifier**. This may benefit from using OpenCV.\n",
-    "    \n",
-    "- Our current model is better at detecting masks in the frontal direction of the face but not as well when it faces sideways. From other models and datasets we used in training, the accuracy seems to be positively correlated with the size and clarity of the facial part in the image.\n",
-    "    - Future direction: If we had the time and bandwidth, we could try using images with better quality and resize it to a larger size. We would also like to add a greater proportion of faces facing other directions into our training set to account for more variability.\n",
-    "\n",
-    "- Some people cannot wear masks due to medical/religious reasons. \n",
-    "    - Future direction: Although it would be hard to develop an algorithm that can tell if someone has a medical condition  that makes them unable to wear masks, we know that certain populations just cannot wear masks (e.g., children < 2yrs). So, it might be worthwhile to develop a face mask detector that does not display warnings when a toddler is not wearing a mask. This would involve training the algorithm to differentiate facial features on top of having masks or not."
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -652,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
